--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     padding: 60px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit , minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill , minmax(300px, 1fr));
     gap: 20px;
 }
 .card{
