--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
     gap: 20px;
 }
 .card{
+    position: relative;
     padding: 20px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     text-align: center;
@@ -49,7 +50,7 @@
 .card p{
     padding: 10px 0;
     margin: 10px 0;
-    background-color: lightgoldenrodyellow;
+    background-color: #FAEBD7;
     border-radius: 10px;
 }
 .card .btn-group{
@@ -58,16 +59,25 @@
     width: 100%;
 }
 .card .btn-group input{
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
     border-radius: 50px;
     padding: 8px;
     margin: 15px 5px 5px 5px;
 }
 .card .btn-group input.read-btn{
+    background: rgb(235, 235, 235);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+.card .btn-group input.read-btn:hover{
     background: rgb(200, 250, 200);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 .card .btn-group input.del-btn{
+    background: rgb(235, 235, 235);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+.card .btn-group input.del-btn:hover{
     background: rgb(253, 212, 196);
 }
 .add-book-btn{
@@ -144,6 +154,36 @@
     margin: 0 auto;
     background: transparent;
     cursor: pointer;
+}
+
+.tool-bar{
+    padding: 10px 15px;
+    border-radius: 50px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+    width: fit-content;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background-color: #FAEBD7;
+}
+.tool-bar ul{
+    list-style-type: none;
+    display: flex;
+}
+
+.tool-bar ul li{
+    padding: 0px 10px;
+    background: #fefefe;
+    border-radius: 50px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
+}
+.tool-bar ul li:not(:first-child){
+    margin-left: 10px;
+}
+.tool-bar ul li a{
+    text-decoration: none;
+    color: #000;
+    font-size: 14px;
 }
 @media screen and (max-width: 767px) {
     .modal-box{
