shortcut keys and books record bar added

--- a/style.css
+++ b/style.css
@@ -8,6 +8,21 @@
   font-family: "Poppins";
 }
 
+kbd {
+  background-color: #eee;
+  border-radius: 3px;
+  border: 1px solid #b4b4b4;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
+    0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
+  color: #333;
+  display: inline-block;
+  font-size: 0.85em;
+  font-weight: 700;
+  line-height: 1;
+  padding: 2px 4px;
+  white-space: nowrap;
+}
+
 .navBar {
   display: flex;
   justify-content: space-between;
@@ -20,6 +35,18 @@
   font-family: "Poppins";
   font-size: 40px;
   font-weight: 600;
+}
+.menu {
+  display: flex;
+  align-items: center;
+}
+.menu .shortcuts {
+  margin-right: 10px;
+}
+.menu .shortcuts p {
+  font-size: 12px;
+  color: grey;
+  text-shadow: 0px 1px 10px rgb(75, 75, 75);
 }
 .menu a {
   background-color: antiquewhite;
@@ -162,7 +189,7 @@
   cursor: pointer;
 }
 
-.tool-bar {
+#tool-bar {
   padding: 10px 15px;
   border-radius: 50px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
@@ -172,21 +199,21 @@
   left: 20px;
   background-color: #faebd7;
 }
-.tool-bar ul {
+#tool-bar ul {
   list-style-type: none;
   display: flex;
 }
 
-.tool-bar ul li {
+#tool-bar ul li {
   padding: 0px 10px;
   background: #fefefe;
   border-radius: 50px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
 }
-.tool-bar ul li:not(:first-child) {
+#tool-bar ul li:not(:first-child) {
   margin-left: 10px;
 }
-.tool-bar ul li a {
+#tool-bar ul li a {
   text-decoration: none;
   color: #000;
   font-size: 14px;
